--- a/Refactoring/CS/Algorithm/Algorithm/Algorithm.csproj
+++ b/Refactoring/CS/Algorithm/Algorithm/Algorithm.csproj
@@ -44,9 +44,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Finder.cs" />
-    <Compile Include="F.cs" />
-    <Compile Include="FT.cs" />
-    <Compile Include="Thing.cs" />
+    <Compile Include="Comparison.cs" />
+    <Compile Include="FinderOption.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
